--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 240px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-color: rgb(244, 134, 31); padding-top: 240px; padding-bottom: 160px;">
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
+    
     <div class="container">
         <div class="row">
             <div class="mbr-table-md-up">
@@ -431,7 +430,7 @@
                         <div class="card-block"><p>글로벌 온라인 쇼핑몰 오픈
 </p><p>글로벌 마케팅 플랫폼 설립
 </p><p>제1회 글로벌 복음송가 경연대회
-</p><p>C-Coin 전용 개인용 콜드월렛 (하드웨어 버전)개발 완료</p></div>
+</p><p>C-Coin 전용 개인용 콜드월렛 (하드웨어 버전)</p><p>개발 완료</p></div>
                         <div class="mbr-author card-footer">
                             
                             <div class="mbr-author-name">2020. Q1</div>
@@ -742,7 +741,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="tnQ1ddG0pXCxFXk+FQYur25UhA1X/65rZe0Dk9ynJYtPgBjizo7yX/XvVFiCI3wzszgUSIfa6iCZXr8ufGJBArYGC6CLeWl8bHNiJloIsjx0Y6bAhAvPE1jj7Kpy7gtV" data-form-email="true">
+                    <input type="hidden" value="wON42Ui6RI1i+xpDdxTzWmGphZb6CzAxbs+GLyXMd8O2TpDXy0g7qK0SG1Ceo5eT5EQmiP9clqM9+6EvH0gaHpsO+JWGwHgD6OuLtDNkswa3A76kNxTLaLdv4OjMmOWL" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
@@ -764,7 +763,7 @@
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-t-message"></textarea>
                     </div>
 
-                    <div><button type="submit" class="btn btn-sm btn-black">문의하기</button></div>
+                    <div><button type="submit" class="btn btn-sm btn-warning">문의하기</button></div>
 
                 </form>
 
@@ -810,12 +809,12 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
