--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <section id="menu-0" data-rv-view="5">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/-A30E8_t4ic?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/-A30E8_t4ic?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
 
     
     <div class="container">
@@ -741,7 +741,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ExijBMaFf8Ct9CRE4q5vyHCk3ytISNfFbYPZlhNR+Qq31NhuDA225G3AyAko5iz9mbMokk9D+XWmHglqavZ96Cc17J6J89bfRC8wBgxA60Hpw3jsX84acO/t+Cj0lnbV" data-form-email="true">
+                    <input type="hidden" value="Zw1fZxiJoeZYBa4cud+9mavpD1Uzj5aaEL1DB0GWUoOL5hBFHl8FyinBmNN72+PplMZx/M3OE3ryfc1JiVbFe9RchST7S+HyxGiqTFD1T0smXdUfk6hMBmHzRvc7JF8S" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
