--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <section id="menu-0" data-rv-view="5">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
 
             <div class="mbr-table">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/GIYxq7VzF4E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/GIYxq7VzF4E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(244, 134, 31);">
     </div>
@@ -742,7 +742,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ke3K8m2VGyHpiRdA4G2jVv4as/p7UoCbqQLqtuxI2AMVkE4YQmDJ6cloLtGxQUDgb/MseNx7oc9c70dLJZldwFydf5itP/BdDPTDkOMN3LgMHUSOnW8Bgc3+28YA6u7B" data-form-email="true">
+                    <input type="hidden" value="Lnu/aW3KhOVBHguX5BTzAAOAjYX3RGXCo6R3Wl4Wbm1JgPTT60lH7OpY1gGi1BHzAmKlqetb4rGMZhXM3HQZ2OttIYe8aOs8uoctjF00PS6m7fHUDKHoYtCNIXew0hem" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
