--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/MYNwIiWP1_E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="285" style="padding-top: 240px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/MYNwIiWP1_E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="285" style="padding-top: 240px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(244, 134, 31);">
     </div>
@@ -670,12 +670,10 @@
                     <div class="card-block">
                         <h4 class="card-title">Jinil Yang</h4>
                         <h5 class="card-subtitle"><strong>Advisor</strong></h5>
-                        <p class="card-text">최근 10년간 IT기획 및 마케팅 업무를 진행하였으며, 글로벌 쇼
-<br>핑몰 및 중국 마케팅을 주로 진행하였다. EBC의 국내 마케팅 및
-<br>커뮤니티 책임자로 일하였으며, EBC의 ICO 종료이후 암호화폐
-<br>거래소에서 상장 및 암호화폐 컨설팅일을 하고 있다.
-<br>C·PLATFORM은 최초 아이디어 단계부터 10개월 이상 어드바
-<br>이저로서의 역할을 수행하고 있다.</p>
+                        <p class="card-text">최근 10년간 IT기획 및 마케팅 업무를 <br>진행하였으며, 글로벌 쇼핑몰 및 중국 마케팅을 주로 진행하였다. EBC의 국내 마케팅 및
+커뮤니티 책임자로 일하였으며, EBC의 ICO 종료이후 암호화폐
+거래소에서 상장 및 암호화폐 컨설팅일을 하고 있다.
+C·PLATFORM은 최초 아이디어 단계부터 10개월 이상 어드바이저로서의 역할을 수행하고 있다.</p>
                         
                     </div>
                 </div>
@@ -742,7 +740,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="T1aL4W9QHKzDQSfr8Y9WXsTaDirxCZDqYkCuiplhjYAjkaAPSVtRXFDnn2NoWzYC40V/12Mo71araONgnKSCL4b23GYaruY9ahbsbYR2fzJ/2iwQNcAqGHwB64z75str" data-form-email="true">
+                    <input type="hidden" value="yl3OpmKoMNKofQZ4sTCu8d8Y+BaYTF1pKZ6h4epz4EeAkzBC+OpITS+wwi0fOeqTgUJ0vAZfHHc5+f7CJO0fGMGvvb34Lq95RC6L4vG90zNXIfiBrSlNBooaZSlHoc0E" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
