--- a/ci.html
+++ b/ci.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="menu-2o" data-rv-view="559">
+  <section id="menu-2o" data-rv-view="803">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -59,7 +59,18 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2u" data-rv-view="603" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="807" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">_<br>CI</h3>
+                
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="image2-2u" data-rv-view="805" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -74,7 +85,7 @@
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding mbr-parallax-background" id="contacts3-2p" data-rv-view="560" style="background-image: url(assets/images/mbr-1920x1241.jpg); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding mbr-parallax-background" id="contacts3-2p" data-rv-view="809" style="background-image: url(assets/images/mbr-1920x1241.jpg); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -118,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="JyjWppjHBwYe0khfQfN2OTj8QZjxYga0OXrlaHNT+FnpHzA69ZCKqMmg4lKc3ewgmiOKTh8OlZGBWXN+ydaUtGUmtpCe8rpTpt7pbzvje9x0dHccvhgj+oURGCmTZDc1" data-form-email="true">
+                    <input type="hidden" value="Vdwb3iANPZ/cVDmPZyUy2gV1AAwN0iR0OKjVK+YXAGyVtNOM3lwD1JfPF+z2yNvIxKKgYMJdi8t8BIpKdSThB13/rX/O6F6b6FfyaZi7JgFOU6Dceh8CxxHsXe1JZK7s" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
