--- a/ci.html
+++ b/ci.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="807" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="807" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -93,7 +93,7 @@
             <div class="mbr-company col-xs-12 col-md-6 col-lg-3">
 
                 <div class="mbr-company card">
-                    <div><img src="assets/images/cplatform-ci-265x46.png" class="card-img-top"></div>
+                    <div><img src="assets/images/cplatform-1.svg" class="card-img-top"></div>
                     <div class="card-block">
                         <p class="card-text">크리스천 대표 블록체인 플랫폼</p>
                     </div>
@@ -129,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="UYJ2AoCxGN4ZJtpuBBqt5F+NETIYAJGGJU4H9an9yC/D2/a2SkSQOjXHtU0va1sk1EkE3lEHVFsOVSVbxf+Tx2tZJA7mRMm+y6GI7DXu7mpXRCXorT9jXmd68sD9s9eg" data-form-email="true">
+                    <input type="hidden" value="Hzk+oLwaET71SWuCQmSO60gRnSP4LyvIA8+YwiK9G0fMJKAckVVoOlz0MYNRvvJR8qxf0DMCMOfhnX/OzcpV9yvBUN5fRfTKSj1V/rDdAEwqYJQM/CVsWLKDdtmAz1Cr" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
